Transition added to Divs.

--- a/Week-2/Assignment 2.2/index.html
+++ b/Week-2/Assignment 2.2/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="container"></div>
     <div class="text">Hello</div>
     <div class="box box1"></div>
     <div class="box box2"></div>
